fixes to keyboard overlapping input

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -56,4 +56,10 @@ page-login {
     height: calc(100vh - 312px);
   }
   .link-banner{ display: none; }
+  .bottom{
+    transition: height 0.2s ease-in-out;
+  }
+  .expanded{
+    margin-bottom: 330px;
+  }
 }
